Alembic incomplete crease import #70021

Closed
opened 2019-09-18 14:05:19 +02:00 by Jani Kahrama · 10 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: 9609840b5e
Worked: Never, 2.80 seems to have no crease support

Short description of error
A mesh exported via Alembic from Maya with edge creases appears in Blender with some edges missing the crease values.

Exact steps for others to reproduce the error
Import attached abc file. Switch to edit mode, observe gaps in creases.
The same file has been imported back to Maya, and the creases are properly preserved.
EDIT: Attached screenshot from Maya (car in white, crease edges in bold)

sports_creases.PNG
sports.abc
sports_creases_Maya.PNG
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: `9609840b5e` Worked: Never, 2.80 seems to have no crease support **Short description of error** A mesh exported via Alembic from Maya with edge creases appears in Blender with some edges missing the crease values. **Exact steps for others to reproduce the error** Import attached abc file. Switch to edit mode, observe gaps in creases. The same file has been imported back to Maya, and the creases are properly preserved. EDIT: Attached screenshot from Maya (car in white, crease edges in bold) ![sports_creases.PNG](https://archive.blender.org/developer/F7755434/sports_creases.PNG) [sports.abc](https://archive.blender.org/developer/F7755453/sports.abc) ![sports_creases_Maya.PNG](https://archive.blender.org/developer/F7758229/sports_creases_Maya.PNG) [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Frand

Added subscriber: @Frand

Added subscribers: @dr.sybren, @mont29

Added subscribers: @dr.sybren, @mont29
Sybren A. Stüvel was assigned by Bastien Montagne 2019-09-19 10:46:42 +02:00

@dr.sybren think that one is for you. :)

@dr.sybren think that one is for you. :)

Please give us enough information to reproduce the issue. Without knowing which edges are missing creases it's hard to figure out what's going wrong. This could be as simple as drawing a few lines where creases are missing in a different colour on top of the already-attached screenshot.

Please give us enough information to reproduce the issue. Without knowing which edges are missing creases it's hard to figure out what's going wrong. This could be as simple as drawing a few lines where creases are missing in a different colour on top of the already-attached screenshot.

Added subscriber: @brecht

Added subscriber: @brecht

Probably the creases are meant to be symmetric?

Probably the creases are meant to be symmetric?
Author

Updated with a Maya screengrab. Creases are most prominent on the hood of the car, and the seats. There are also crease loops in the fenders. Thank you for looking into this.

Updated with a Maya screengrab. Creases are most prominent on the hood of the car, and the seats. There are also crease loops in the fenders. Thank you for looking into this.

This issue was referenced by 5883b6fde2

This issue was referenced by 5883b6fde2d843e759016a07ae16abe762eb4d19

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Fix confirmed on this end as well, thank you!

Fix confirmed on this end as well, thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70021
No description provided.